# Game

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: git_push.sh  install_deps.sh
src/: main.cpp
src/cmp/: component.hpp  entity.cpp  entity.hpp  physics.hpp
src/man/: componentstorage.hpp  entitymanager.cpp  entitymanager.hpp
src/sys/: collision.cpp  collision.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  player_controller.hpp  rendersystem.cpp  rendersystem.hpp
src/util/: gamecontext.hpp  typealiases.hpp
